<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Blood Sugar</string>
    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">French</string>
    <string name="portuguese" translatable="false">Portuguese</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="german" translatable="false">German</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="indonesia" translatable="false">Indonesia</string>
    <string name="china" translatable="false">China</string>
    <string name="mg_dL" translatable="false">mg/dL</string>
    <string name="mmol_l" translatable="false">mmol/l</string>
    <string name="_0" translatable="false">0</string>
    <string name="_95_0" translatable="false">95.0</string>
    <string name="_71_0" translatable="false"><![CDATA[<71.0]]></string>
    <string name="_72_0_99_0" translatable="false">72.0–99.0</string>
    <string name="_99_0_126_0" translatable="false">99.0–126.0</string>
    <string name="_126_0" translatable="false"><![CDATA[>126.0]]></string>
    <string name="thank_you">Thank you</string>
    <string name="rate_us">Rate us</string>
    <string name="not_now">Not now</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="your_opinion_matter_to_us">Your opinion matter to us</string>
    <string name="if_you_enjoy_this_know_your_device_would_you_mind_rating_us_on_the_google_play_then">If you enjoy this Blood Sugar, would \nyou mind rating us on the Google Play, then?</string>
    <string name="language">Language</string>
    <string name="privacy_policy_u"><u>Privacy Policy</u></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="next">Next</string>
    <string name="quit">Quit</string>
    <string name="quit_">Quit?</string>
    <string name="cancel">Cancel</string>
    <string name="title_intro_01">Track Blood Sugar Accurately</string>
    <string name="title_intro_02">Classify Blood Sugar Level</string>
    <string name="title_intro_03">Blood Sugar History Checker</string>
    <string name="content_intro_01">Easy to monitor and record your \nblood sugar.</string>
    <string name="content_intro_02">Measure and analyze blood sugar levels \naccording to the sugar target range.</string>
    <string name="content_intro_03">Control diabetes and manage health data.</string>
    <string name="continue_">Continue</string>
    <string name="permission">Permission</string>
    <string name="this_app_needs_permissions_below_to_work_properly">This app needs permissions below to \nwork properly.</string>
    <string name="allow_access">Allow Access</string>
    <string name="back">Back</string>
    <string name="please_choose_a_language">Please choose a language</string>
    <string name="tracker">Tracker</string>
    <string name="history">History</string>
    <string name="blood_sugar">Blood Sugar</string>
    <string name="no_data_in_here">No data in here.</string>
    <string name="glycemic_index">Glycemic Index</string>
    <string name="condition">Condition</string>
    <string name="All_type">All type</string>
    <string name="Default">Default</string>
    <string name="Fasting">Fasting</string>
    <string name="Before_a_meal">Before a meal</string>
    <string name="After_a_meal_1_2h">After a meal (1–2h)</string>
    <string name="Asleep">Asleep</string>
    <string name="Before_exercise">Before exercise</string>
    <string name="After_exercise">After exercise</string>
    <string name="recently">Recently</string>
    <string name="sugar_target_range">Sugar Target Range</string>
    <string name="unit">Unit</string>
    <string name="export_as_file">Export As File</string>
    <string name="export_file">Export File</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="setting">Settings</string>
    <string name="Send_Email">Send Email</string>
    <string name="There_is_no">There is no</string>
    <string name="information">Information</string>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="pre_diabetes">Pre - Diabetes</string>
    <string name="diabetes">Diabetes</string>
    <string name="ok">OK</string>
    <string name="email_clients_not_found">Email clients not found</string>
    <string name="send_email">Send email</string>
    <string name="save">Save</string>
    <string name="csv_day">Day,</string>
    <string name="csv_time">Time,</string>
    <string name="csv_blood_sugar">Blood Sugar,</string>
    <string name="csv_condition">Condition,</string>
    <string name="csv_notes">Note,</string>
    <string name="csv_type">Type</string>
    <string name="save_successful">Save successful</string>
    <string name="file_already_saved">File Already Saved</string>
    <string name="version">Version: </string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="start">  Start  </string>
    <string name="end">  End  </string>
    <string name="record">record</string>
    <string name="records">records</string>
    <string name="invalid_date">Invalid Date. Please select another date</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="note">Note</string>
    <string name="new_record">New Record</string>
    <string name="please_input_a_valid_number_1_0_35_0_mmol_l">The valid number remains from \n 1.0 ~ 35.0 (mmol/l).</string>
    <string name="please_input_a_valid_number_18_0_630_0_mg_dl">The valid number remains from \n 18.0 ~ 630.0 (mg/dl)</string>
    <string name="please_enter_valid_value">Please input a valid number (%s ~  %s) %s)</string>
    <string name="duplicate_records_detected">Duplicate records detected</string>
    <string name="you_are_adding_a_new_record_with_the_same_content_do_you_want_to_overwrite_that_record">You are adding a new record with the same content. Do you want to overwrite that record?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="sugar_dashboard">Sugar Dashboard</string>
    <string name="recommendations">Recommendations</string>
    <string name="this_time_your_blood_sugar_level_is_a_bit_low_your_safe_range_is_4_0_5_5_so_please_be_careful">This time your blood sugar level is a bit low. Your safe range is 4.0–5.5, so please be careful.</string>
    <string name="result_low_1"><b>1. When exercising:</b> Check your blood sugar. Make sure you have snacks with you. Talk to your provider about reducing your insulin dose on days you exercise.</string>
    <string name="result_low_2"><b>2. Control your bedtime:</b> Snacks to prevent overnight low blood sugar. Protein-rich snacks may be best.</string>
    <string name="result_low_3"><b>3. Don\'t drink alcohol without eating food:</b> Women should limit alcohol consumption to 1 drink per day and men should limit alcohol consumption to 2 drinks per day.</string>
    <string name="reference_https_medlineplus_gov_ency_patientinstructions_000085_htm">Reference: https://medlineplus.gov/ency/patientinstructions/000085.htm</string>
    <string name="hello_your_blood_sugar_results_this_time_are_normal_i_m_happy_to_see_your_efforts_pay_off">Hello! Your blood sugar results this time are normal. I\'m happy to see your efforts pay off!</string>
    <string name="result_normal_1"><b>1. Eating:</b> Enjoy your favorite foods in moderation. Your healthcare team can create a personalized meal plan. Focus on a variety of healthy foods from all groups: vegetables (both starchy and non-starchy), fruits, whole grains, lean proteins, and low-fat dairy. Incorporate heart-healthy fats from oils, nuts, seeds and fish. Use oil instead of butter or margarine when cooking.</string>
    <string name="result_normal_2"><b>2. Limit:</b> Fried salty, and sugary foods and drinks, including sweets and beverages with added sugars. Choose water over sugary drinks and use sugar substitutes. Drink alcohol moderately and eat when consuming alcohol to prevent low blood sugar, especially if using insulin or certain diabetes medications.</string>
    <string name="result_normal_3"><b>3. Exercise:</b> You can maintain a rhythmic activity, incorporating light activities every half hour when sitting for long periods of time. Aim for 30 minutes of aerobic exercise most days, such as brisk walking, swimming or cycling. Additionally, participate in strength training exercises 2–3 times per week to build muscle and increase calorie burning.</string>
    <string name="reference_https_www_niddk_nih_gov_health_information_diabetes_overview_diet_eating_physical_activity">Reference: https://www.niddk.nih.gov/health-information/diabetes/overview/diet-eating-physical-activity</string>
    <string name="unfortunately_your_blood_sugar_level_exceeds_the_standard_range_please_try_to_control_it_within_the_range_of_4_0_5_5">Unfortunately, your blood sugar level exceeds the standard range. Please try to control it within the range of 4.0–5.5.</string>
    <string name="result_pre_diabetes_1"><b>1. Balanced diet:</b> Focus on whole foods, emphasizing a diet rich in whole grains, lean proteins and healthy fats. Follow guidance from reputable sources such as the CDC and ADA regarding meal proportions. Limit sugary foods and drinks, and pay attention to portion sizes.</string>
    <string name="result_pre_diabetes_2"><b>2. Regular physical activity:</b> aiming for 150 minutes per week, can help prevent type 2 diabetes. Controlling your weight, getting enough sleep and avoiding too much alcohol and tobacco are also important. Monitoring A1C, blood pressure and cholesterol levels regularly is essential. With lifestyle modifications, prediabetes can be reversed, reducing the risk of developing diabetes.</string>
    <string name="your_blood_sugar_results_are_too_high_take_control_of_it_immediately">Your blood sugar results are too high. Take control of it immediately</string>
    <string name="result_diabetes_1"><b>1. Food:</b> Choose healthy foods and drinks, choosing dairy or plant-based alternatives, fruits, non-starchy vegetables, protein-rich foods and whole grains.</string>
    <string name="result_diabetes_2"><b>2. Nutrients:</b> Prioritize nutrients such as vitamins, calcium, fiber and healthy fats. Pay attention to carbohydrates, especially in fruits, beans, and starchy vegetables.</string>
    <string name="result_diabetes_3"><b>3. Limit:</b> Eat saturated fat, sodium, sugary foods and drinks. Drink alcohol in moderation and monitor your blood sugar levels, especially if taking insulin.</string>
    <string name="result_diabetes_4"><b>4. Meals:</b> Discuss meal timing with healthcare professionals based on medications, activity level and health status. Consider carb counting or the plate-based eating method to manage portion sizes effectively.</string>
    <string name="result_diabetes_5"><b>5. Physical activity:</b> Regular, gentle exercise helps people control diabetes and stay healthy.</string>
    <string name="reference_https_www_niddk_nih_gov_health_information_diabetes_overview_healthy_living_with_diabetes">Reference: https://www.niddk.nih.gov/health-information/diabetes/overview/healthy-living-with-diabetes</string>
    <string name="information_0">What is blood sugar?</string>
    <string name="information_1">When and how should I check my blood glucose?</string>
    <string name="information_2">What happens if my blood glucose level becomes too high?</string>
    <string name="information_3">How common is hypoglycemia?</string>
    <string name="information_4">How is hypoglycemia diagnosed in people without diabetes?</string>
    <string name="information_5">How can I prevent low blood sugar?</string>
</resources>