<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:background="@drawable/bg_radius_24"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_18sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/sf_pro_display_600"
                android:gravity="center"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/sugar_target_range"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/cancel"
                android:padding="4dp"
                android:src="@drawable/ic_close" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:cardBackgroundColor="@color/color_low"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/sf_pro_display_400"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/low"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/tv_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/sf_pro_display_500"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/_71_0"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:cardBackgroundColor="@color/color_normal"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/sf_pro_display_400"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/normal"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/tv_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/sf_pro_display_500"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/_72_0_99_0"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:cardBackgroundColor="@color/color_pre_diabetes"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/sf_pro_display_400"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/pre_diabetes"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/tv_pre_diabetes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/sf_pro_display_500"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/_99_0_126_0"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:cardBackgroundColor="@color/color_diabetes"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/sf_pro_display_400"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/diabetes"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/tv_diabetes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/sf_pro_display_500"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/_126_0"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>